fix for service worker reload fix for height on ios

--- a/docs/stylesheets/index.css
+++ b/docs/stylesheets/index.css
@@ -107,7 +107,7 @@ form#answer.hidden {
   background-color: white;
 }
 #x-snap > div {
-  height: 100vh;
+  /* height: 100vh; */
   overflow-y: hidden;
   overflow-x: hidden;
 }
@@ -151,7 +151,7 @@ form#answer.hidden {
   }
   #x-snap > div {
     scroll-snap-stop: always;
-    height: 100vh;
+    /* height: 100vh; */
     /* width: 100vw; */
     overflow-y: hidden;
     scroll-snap-align: center;
